2019-10-10  Matteo Corti  <corti@Matteo-Cortis-Mac-mini.local>

	* check_ssl_cert (main): do not disable TLS 1.3 if --rsa is specified

2019-10-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): fixes the ciphers for --rsa and --ecdsa

2019-10-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): a wildcard certificate does not match the 'main' domain

2019-10-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disables TLS 1.3 with --rsa
	* check_ssl_cert: Validate OCSP stapling expiring date

2019-09-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: stops if needed programs are not foud

2019-09-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug in the processing of the SSL Labs options
	* check_ssl_cert: Fixed a bug with POP3S

2019-09-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: OCSP check does not trigger an additional s_client call

2019-09-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a problem in the critical output

2019-09-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Consolidated the error messages in case of more than one error
	* check_ssl_cert: Fixed a bug where the cypher was not forced by the OCSP checks

2019-08-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (ascii_grep): Removed NULL characters before 'grepping' a file
	* check_ssl_cert (critical): Display the CN in a crical or warning message (if present)
	* check_ssl_cert: merged patch to choose the IP protocol version

2019-08-08  Matteo Corti <matteo@corti.li>

	* check_ssl_cert: Applied patch to support LDAPS
	* check_ssl_cert.1: Formatting and ordering

2019-07-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Try to detect if LDAP is not supported

2019-06-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Return the filename when using --file by warnings

2019-03-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added an option to specify a user agent for cURL
