@@ -1,3 +1,7 @@
+2019-10-14  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert (main): Remove RSA-PSS if not TLS 1.3 requested
+
 2019-10-10  Matteo Corti  <corti@Matteo-Cortis-Mac-mini.local>
 
 	* check_ssl_cert (main): do not disable TLS 1.3 if --rsa is specified
